# pipeline-3cx

./: .gitignore  README.md  estrutura_projeto.txt  pyproject.toml
data/: assist.xlsx  ativa.csv  ativa_final.csv  ativa_final.xlsx  call_reports(1).csv  call_reports.csv  call_reports_2.csv  call_reports_3.csv  consolidado_receptiva.csv  dataframe.xlsx  estudo3cx.xlsx  receptiva.csv  receptiva_filtrado.xlsx  receptiva_final.csv  receptiva_final.xlsx  receptiva_reason.xlsx  ~$assist.xlsx
docs/: README.md
src/ETL/: extract.py
src/pipelines/: Receptivas.csv  consolidar.py  extract.py  main.py  transform.py  transform_antigo.py  transform_ativa.py  transform_receptiva.py  update_webdriver.py
test/: test_extracao.py  test_transform.py  test_webdriver.py  test_while.py  webdriver.py  while.py
