[tool.poetry]
name = "pipeline-3cx"
version = "0.1.0"
description = "Projeto de pipeline de dados para alimentar power bi com informaçẽos gerencias do produto recupera360"
authors = ["Luiz <lgds.demtrio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
selenium = "^4.27.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
webdriver-manager = "^4.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
